--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,9 @@ matrix:
       compiler: clang
       addons:
         apt:
-          #sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-5.0' ]        
-          sources: [ 'ubuntu-toolchain-r-test']        
-          packages:
-            - llvm-5.0-dev
+          sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-5.0' ]        
+          #packages:
+          #  - llvm-5.0-dev
       env:
         - CXX_OLEVEL=2 CXX=clang++
 
