--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ cache: packages
 
 latex: true
 
+addons:
+   apt:
+     update: true
 
 env:
   matrix: 
@@ -17,8 +20,8 @@ matrix:
       addons:
         apt:
           sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-5.0' ]        
-          #packages:
-          #  - llvm-5.0-dev
+          packages:
+            - llvm-5.0-dev
       env:
         - CXX_OLEVEL=2 CXX=clang++
 
