--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(map_performance)
 export(perform_df)
 export(performance_mu)
 export(posterior_predict)
+export(posterior_quantile)
 export(stan_performance)
 import(Rcpp)
 import(magrittr)
