--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(perform_df)
 export(performance_mu)
 export(posterior_predict)
 export(posterior_quantile)
+export(predictions)
 export(stan_performance)
 import(Rcpp)
 import(magrittr)
