--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
 ByteCompile: true
-Depends: R (>= 3.4.0), Rcpp (>= 0.12.16), dplyr, tidyr, purrr, stringr, magrittr, methods, truncnorm
+Depends: R (>= 3.4.0), Rcpp (>= 0.12.16), dplyr, bindr, tidyr, purrr, stringr, magrittr, methods, truncnorm
 Imports: rstan (>= 2.17.3), rstantools (>= 1.5.0)
 LinkingTo: StanHeaders (>= 2.17.2), rstan (>= 2.17.3), BH (>= 1.66.0-1), Rcpp (>= 0.12.16), RcppEigen (>= 0.3.3.4.0)
 SystemRequirements: GNU make
