first commit. branch contains model based on zero-inflated normal distribution, if that is a thing. seems to work quite well. Also fixed warning about colliding namespace. woo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .Rproj.user
 .Rhistory
+stan_example.samples_1.csv
+stan_example.samples_2.csv
+stan_example.samples_3.csv
+stan_example.samples_4.csv
