--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,13 +13,22 @@ export(simulate_data)
 export(stan_performance)
 import(Rcpp)
 import(dplyr)
-import(magrittr)
 import(methods)
 import(purrr)
 import(rstantools)
-import(stringr)
-import(tidyr)
-import(truncnorm)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,summarise_all)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,set_colnames)
+importFrom(purrr,map)
+importFrom(purrr,map_dbl)
+importFrom(purrr,map_df)
+importFrom(purrr,map_lgl)
 importFrom(rstan,sampling)
+importFrom(stringr,str_glue)
+importFrom(tidyr,gather)
+importFrom(truncnorm,rtruncnorm)
 useDynLib(performr, .registration = TRUE)
