updated package according to cxx14 updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: performr
-Version: 0.1
+Version: 0.2
 Title: Fit probabilistic performance curve model
 Description: performr provides a number of R functions to fit (calling Stan) and describe performance curves using a specific model.
 Authors@R: person("Silas", "Tittes", , "silas.tittes@gmail.com", c("aut", "cre"))
@@ -7,9 +7,9 @@ License: GPL (>=3)
 Encoding: UTF-8
 LazyData: true
 ByteCompile: true
-Depends: R (>= 3.4.0), Rcpp (>= 0.12.16), dplyr, bindr, tidyr, purrr, magrittr, stringr, methods, truncnorm
-Imports: rstan (>= 2.17.3), rstantools (>= 1.5.0)
-LinkingTo: StanHeaders (>= 2.17.2), rstan (>= 2.17.3), BH (>= 1.66.0-1), Rcpp (>= 0.12.16), RcppEigen (>= 0.3.3.4.0)
+Depends: R (>= 3.4.0), Rcpp (>= 0.12.0), dplyr, bindr, tidyr, purrr, magrittr, stringr, methods, truncnorm
+Imports: rstan (>= 2.18.1), rstantools (>= 1.5.0)
+LinkingTo: StanHeaders (>= 2.18.0), rstan (>= 2.18.1), BH (>= 1.66.0), Rcpp (>= 0.12.0), RcppEigen (>= 0.3.3.3.0)
 SystemRequirements: GNU make
 NeedsCompilation: yes
 RoxygenNote: 6.0.1.9000
