--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,25 @@ cache: packages
 
 latex: true
 
+r_github_packages:
+  - jimhester/covr
+
+env:
+  global:
+    - MAKEFLAGS="-j 2"
+
+matrix:
+  include:
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+         packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
 
 before_install:
   - mkdir -p ~/.R/
