--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: r
 sudo: false
-r: devel
 cache: packages
+dist: trusty
 
 latex: true
-
+r_build_args: '--no-build-vignettes'
+r_check_args: '--ignore-vignettes'
 
 r_github_packages:
   - jimhester/covr
@@ -20,17 +21,15 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-         packages:
+          packages:
             - g++-7
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-
 
 before_install:
   - mkdir -p ~/.R/
   - echo "CXX14 = g++-7 -fPIC -flto=2" >> ~/.R/Makevars
   - echo "CXX14FLAGS = -mtune=native -march=native -Wno-unused-variable -Wno-unused-function -Wno-unused-local-typedefs -Wno-ignored-attributes -Wno-deprecated-declarations -Wno-attributes -O3" >> ~/.R/Makevars
-
 
 script: 
   - |
